--- a/tpl/admin/project/index.htm
+++ b/tpl/admin/project/index.htm
@@ -18,7 +18,7 @@
         ?>
             <div class='project_elf' muffinid='{:$muffinid}'>
                 <div class='project_info'>
-                    <div class='cover_thumbnail'><a href='?admin/project/view&muffinid={:$muffinid}'><img src='{:$cover_thumbnail_url}'></a></div>
+                    <div class='cover_thumbnail'><a href='?admin/project/view&projectmuffinid={:$muffinid}'><img src='{:$cover_thumbnail_url}'></a></div>
                     <div class='project_info_right'>
                         <div class='project_id'>编号：{:$project_id}</div>
                         <div class='title'>名称：{:$title}</div>
@@ -27,11 +27,11 @@
                         <!--<div class='type'>状态：{:$status}</div>-->
                         <div style='margin-bottom: 3px;'>
                             <a href='{:$paperfile_url}'><div class='btn btn-success'>下载文件</div></a>
-                            <a href='?admin/task/index&muffinid={:$muffinid}'><div class='btn btn-default'>任务列表</div></a>
+                            <a href='?admin/task/index&projectmuffinid={:$muffinid}'><div class='btn btn-default'>任务列表</div></a>
                         </div>
                         <div>
                             <div class='btn btn-danger del_btn' data-toggle="modal" data-target="#myModal" >删除项目</div>
-                            <a href='?admin/project/new&muffinid={:$muffinid}'><div class='btn btn-primary modify_btn'>编辑项目</div></a>
+                            <a href='?admin/project/new&projectmuffinid={:$muffinid}'><div class='btn btn-primary modify_btn'>编辑项目</div></a>
                         </div>
                     </div>
                 </div>
