Add addPhotoCard function to the wechat/index/sheet

--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -22,6 +22,7 @@
                  'openProductSpecificView', 'addCard', 'chooseCard',
                  'openCard', 'getLocalImgData' ]
      });
+     var imgRoot = '{[:$imgRoot]}';
 </script>
 
 <!-- 主体页面 -->
