--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -1,6 +1,7 @@
 <!-- FIXME: 这里先这样写，获取全部接口。以后考再虑是否要每次都获取全部的接口功能，把这段代码移动到header.htm中 -->
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript">
+     var imgRoot = '{:$imgRoot}';
      wx.config({
          debug: true,
          appId: '{:$signPackage["appid"]}',
@@ -22,7 +23,6 @@
                  'openProductSpecificView', 'addCard', 'chooseCard',
                  'openCard', 'getLocalImgData' ]
      });
-     var imgRoot = '{[:$imgRoot]}';
 </script>
 
 <!-- 主体页面 -->
