增加调查员页和通用设置页。
Change-Id: I7727ca49160f6590e1e609524610788c9b9de6a9

--- a/tpl/admin/header.htm
+++ b/tpl/admin/header.htm
@@ -87,7 +87,7 @@
                         <li><a href="?admin/project/index"><i class="fa fa-dashboard fa-fw"></i> 任务管理</a></li>
                         <li><a href="?admin/sheet/index"><i class="fa fa-dashboard fa-fw"></i> 调查结果</a></li>
                         <li><a href="?admin/investigator/index"><i class="fa fa-dashboard fa-fw"></i> 调查员信息</a></li>
-                        <li><a href="?admin/system/project_types"><i class="fa fa-fw fa-wrench "></i> 系统设置</span></a></li>
+                        <li><a href="?admin/system/settings"><i class="fa fa-fw fa-wrench "></i> 系统设置</span></a></li>
                     </ul>
                 </div>
                 <!-- /.sidebar-collapse -->
