hide some setting items.
Change-Id: I2c50aaad244619d6833b921cbed9b8bba90ad5bb

--- a/tpl/admin/system/settings.htm
+++ b/tpl/admin/system/settings.htm
@@ -9,6 +9,7 @@
         </thead>
         <tbody>
             <?php foreach ($settings as $key => $setting) { ?>
+            <?php       if ($setting["hidden"] != 0) continue; ?>
             <tr>
                 <td class="item-table-q">{:$setting["id"]}</td>
                 <td class="item-table-2">{:$setting["title"]}</td>
