--- a/tpl/admin/investigator/index.htm
+++ b/tpl/admin/investigator/index.htm
@@ -27,7 +27,7 @@
                 </ul>
                 <p>正在进行任务：</p>
                 <ul>
-                    <li v-for="task in userlist[viewuserkey].tasks">{{task.title}}</li>
+                    <li v-for="task in userlist[viewuserkey].tasks">{{task.project.title}}-{{task.title}}-{{task.project.deadline}}</li>
                 </ul>
             </td></tr>
         </table>
