pop a toast after accept a task.
Change-Id: I4c47efd37b3c38fb44f21b1965300a3b9e289af1

--- a/tpl/wechat/index/taskaround.htm
+++ b/tpl/wechat/index/taskaround.htm
@@ -44,6 +44,15 @@
         </div>
     </div>
 </div>
+
+<div id="toast" class="hidden">
+    <div class="weui_mask_transparent"></div>
+    <div class="weui_toast">
+        <i class="weui_icon_toast"></i>
+        <p class="weui_toast_content">任务已领取</p>
+    </div>
+</div>
+
 <script>
 var baiduak = "{=$baiduak}"; 
 var wx_appId = '{:$signPackage["appid"]}';
