--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -1,35 +1,53 @@
 <!-- FIXME: 这里先这样写，获取全部接口。以后考再虑是否要每次都获取全部的接口功能，把这段代码移动到header.htm中 -->
 <script src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
 <script type="text/javascript">
-     var imgRoot = '{:$imgRoot}';
-     wx.config({
-         debug: true,
-         appId: '{:$signPackage["appid"]}',
-         timestamp: {:$signPackage["timestamp"]},
-         nonceStr: '{:$signPackage["noncestr"]}',
-         signature: '{:$signPackage["signature"]}',
-         jsApiList : [ 'checkJsApi', 'onMenuShareTimeline',
-                 'onMenuShareAppMessage', 'onMenuShareQQ',
-                 'onMenuShareWeibo', 'hideMenuItems',
-                 'showMenuItems', 'hideAllNonBaseMenuItem',
-                 'showAllNonBaseMenuItem', 'translateVoice',
-                 'startRecord', 'stopRecord', 'onRecordEnd',
-                 'playVoice', 'pauseVoice', 'stopVoice',
-                 'uploadVoice', 'downloadVoice', 'chooseImage',
-                 'previewImage', 'uploadImage', 'downloadImage',
-                 'getNetworkType', 'openLocation', 'getLocation',
-                 'hideOptionMenu', 'showOptionMenu', 'closeWindow',
-                 'scanQRCode', 'chooseWXPay',
-                 'openProductSpecificView', 'addCard', 'chooseCard',
-                 'openCard', 'getLocalImgData' ]
-     });
+    var __imgRoot = '{:$imgRoot}';
+    var __paperId = 2;
+    var __userId = 7;
+    var __answerId = 0;
+    var __photosList = [];
+    // wx.config({
+    //     debug: true,
+    //     appId: '{:$signPackage["appid"]}',
+    //     timestamp: {:$signPackage["timestamp"]},
+    //     nonceStr: '{:$signPackage["noncestr"]}',
+    //     signature: '{:$signPackage["signature"]}',
+    //     jsApiList : [ 'checkJsApi', 'onMenuShareTimeline',
+    //             'onMenuShareAppMessage', 'onMenuShareQQ',
+    //             'onMenuShareWeibo', 'hideMenuItems',
+    //             'showMenuItems', 'hideAllNonBaseMenuItem',
+    //             'showAllNonBaseMenuItem', 'translateVoice',
+    //             'startRecord', 'stopRecord', 'onRecordEnd',
+    //             'playVoice', 'pauseVoice', 'stopVoice',
+    //             'uploadVoice', 'downloadVoice', 'chooseImage',
+    //             'previewImage', 'uploadImage', 'downloadImage',
+    //             'getNetworkType', 'openLocation', 'getLocation',
+    //             'hideOptionMenu', 'showOptionMenu', 'closeWindow',
+    //             'scanQRCode', 'chooseWXPay',
+    //             'openProductSpecificView', 'addCard', 'chooseCard',
+    //             'openCard', 'getLocalImgData' ]
+    // });
 </script>
 
 <!-- 主体页面 -->
 <div class="wx_view">
     <div class="wx_col_item">
         <div class="wx_row_item card_book" id="card_book">
-            <div class="card add_card_btn" id="add_card_btn" >
+            <div class="card" v-for="photo in photosList">
+                <div class="card_body" v-bind:style="{'background-image':'url('+__imgRoot+photo.imgUrl+')'}">
+                </div>
+                <div class="card_footer dropup" >
+                    <div class="card_title">{{ photo['imgContent'] }}</div>
+                    <button class="card_dropdown_btn" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dLabel" style="min-width: 0;">
+                        <li><i>修改</i></li>
+                        <li class="delete_btn"><i>删除</i></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="card add_card_btn" id="add_card_btn" v-on:click="addPhoto">
                 <i class="fa fa-plus" style="font-size: 64px;"></i>
                 <div>点击添加图片</div>
             </div>
@@ -50,12 +68,12 @@
                 <strong style="font-size: 20px;">提交图片</strong>
             </div>
             <div class="modal-body" style="width: 90%; margin-left: auto; margin-right: auto; padding: 2%; text-align: center;">
-                <img id="add_photo_modal_img" src="[:app]/images/default_images/00.jpg" style="max-width: 40vw; max-height: 40vw; padding-bottom: 2%; margin: 2%;">
-                <input type="text" class="form-control" id="add_photo_modal_img_content" placeholder="请添加备注">
+                <img id="add_photo_modal_img" v-bind:src="imgUrl" style="max-width: 40vw; max-height: 40vw; padding-bottom: 2%; margin: 2%;">
+                <input type="text" class="form-control" id="add_photo_modal_img_content" placeholder="请添加备注" v-bind:value="imgContent">
             </div>
             <div class="modal-footer flex-item flex-row" style="width: 100%; padding: 0px; text-align: center;">
                 <div class="modal-footer-left_btn" id="add_photo_cancel" data-dismiss="modal" style="height: 100%; width: 100%; border-right: 0.5px solid #e5e5e5; padding: 3%">取消</div>
-                <div class="modal-footer-right_btn" id="add_photo_submit" style="height: 100%; width: 100%; border-left: 0.5px solid #e5e5e5; padding: 3%;">提交</div>
+                <div class="modal-footer-right_btn" id="add_photo_submit" style="height: 100%; width: 100%; border-left: 0.5px solid #e5e5e5; padding: 3%;" v-on:click="updatePhoto">提交</div>
             </div>
         </div>
     </div>
