--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -7,7 +7,7 @@
     var __answerId = 0;
     var __photosList = [];
     wx.config({
-        debug: true,
+        debug: false,
         appId: '{:$signPackage["appid"]}',
         timestamp: {:$signPackage["timestamp"]},
         nonceStr: '{:$signPackage["noncestr"]}',
