1 accepted task can be canceled now.

--- a/tpl/admin/task/index.htm
+++ b/tpl/admin/task/index.htm
@@ -115,8 +115,9 @@
         ?>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-        <button type="button" class="btn btn-danger do_accept">确认分派</button>
+        <button type="button" class="btn btn-danger cancel_accept">撤消分派任务</button>
+        <!--<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>-->
+        <button type="button" class="btn btn-success do_accept">确认分派</button>
       </div>
     </div>
   </div>
