--- a/tpl/wechat/index/sheet.htm
+++ b/tpl/wechat/index/sheet.htm
@@ -5,6 +5,7 @@
     var __paperId = {:$paperId};
     var __userId = {:$userId};
     var __answerId = 0;
+    // FIXME: 应该将photo与photosList写成一个类
     var __photosList = [];
     wx.config({
         debug: false,
@@ -41,13 +42,13 @@
                     <button class="card_dropdown_btn" id="dLabel" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="glyphicon glyphicon-option-vertical" aria-hidden="true"></span>
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dLabel" style="min-width: 0;">
-                        <li><i>修改</i></li>
-                        <li class="delete_btn"><i>删除</i></li>
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dLabel" style="min-width: 10vw;">
+                        <li v-on:click="modifyPhoto(photo.imgUrl)"><i>修改</i></li>
+                        <li v-on:click="deletePhoto(photo.imgUrl)"><i>删除</i></li>
                     </ul>
                 </div>
             </div>
-            <div class="card add_card_btn" id="add_card_btn" v-on:click="addPhoto">
+            <div class="card add_card_btn" id="add_card_btn" v-on:click="addPhoto()">
                 <i class="fa fa-plus" style="font-size: 64px;"></i>
                 <div>点击添加图片</div>
             </div>
@@ -73,7 +74,27 @@
             </div>
             <div class="modal-footer flex-item flex-row" style="width: 100%; padding: 0px; text-align: center;">
                 <div class="modal-footer-left_btn" id="add_photo_cancel" data-dismiss="modal" style="height: 100%; width: 100%; border-right: 0.5px solid #e5e5e5; padding: 3%">取消</div>
-                <div class="modal-footer-right_btn" id="add_photo_submit" style="height: 100%; width: 100%; border-left: 0.5px solid #e5e5e5; padding: 3%;" v-on:click="updatePhoto">提交</div>
+                <div class="modal-footer-right_btn" id="add_photo_submit" style="height: 100%; width: 100%; border-left: 0.5px solid #e5e5e5; padding: 3%;" v-on:click="updatePhoto()">提交</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- 修改卡片提示框 -->
+<!-- FIXME: 现在是混搭布局，需要以后换成flex... -->
+<div class="modal" id="modify_photo_modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content" style="width: 100%;">
+            <div class="modal-header" style="width: 90%; margin-left: auto; margin-right: auto; padding: 2%;">
+                <strong style="font-size: 20px;">修改备注信息</strong>
+            </div>
+            <div class="modal-body" style="width: 90%; margin-left: auto; margin-right: auto; padding: 2%; text-align: center;">
+                <img id="modify_photo_modal_img" v-bind:src="photo.imgUrl" style="max-width: 40vw; max-height: 40vw; padding-bottom: 2%; margin: 2%;">
+                <input type="text" class="form-control" id="modify_photo_modal_img_content" placeholder="请添加备注" v-bind:value="photo.imgContent">
+            </div>
+            <div class="modal-footer flex-item flex-row" style="width: 100%; padding: 0px; text-align: center;">
+                <div class="modal-footer-left_btn" id="modify_photo_cancel" data-dismiss="modal" style="height: 100%; width: 100%; border-right: 0.5px solid #e5e5e5; padding: 3%">取消</div>
+                <div class="modal-footer-right_btn" id="modify_photo_submit" style="height: 100%; width: 100%; border-left: 0.5px solid #e5e5e5; padding: 3%;" v-on:click="modifyPhotoContent()">修改</div>
             </div>
         </div>
     </div>
